White Space Fix

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -11,7 +11,7 @@
 
 body
 	font-size: 16px
-	min-width: 320px
+	min-width: 1170px
 	max-width: 100vw
 	position: relative
 	line-height: 1.65
@@ -52,7 +52,7 @@ b, strong
 	position: relative
 
 .wrapper 
-	width: 1170px
+	min-width: 1170px
 	margin: 0 auto
 
 .top-line
